Added notification sent to person if an issue was created on behalf of them.
Technicians can no longer accept their own issues.
Fixed technicians showing as technicians for their own issues.
Fixed technicians showing incorrect issues assigned to them in issues_manage_technicians.php.
Fixed people not being able to access their own issues.
Change background colour of technician post in issues_discuss_view.php.
Changed Issue Filter default to "All" if available.
Added notification for posting for issues_discuss_view.php.

v0.1.01
-------
Update broken in v0.1.00 fixed in this version.

v0.1.02
-------
Changed Student to Owner in issues_discuss_view.php.
Changed Name to Owner in issues_view.php.
Changed drop down to order by surname, preferredName in issues_createTechnicians.php.
Changed drop down to show surname, preferredName in issues_createTechnicians.php.
Combined Date and Title and Owner and Category in issues_view.php.
Gave Admins full access to system.
Changed URLList of View issues_All and View issues_All&Assign to "issues_view.php, issues_discuss_view.php" and "issues_view.php, issues_assign.php, issues_discuss_view.php" respectively.
Changed technicianPosted to gibbonPersonID in table helpDeskIssueDiscuss.
Fixed an issue where admins would not show their name when posting.
Added success and failure boxes at the tops of multiple pages.

v0.1.03
-------
Fixed a bug where the gibbonPersonID would sometimes not be set in issues_createProcess.php.
Fixed having double error/success boxes ons issues_discuss_view.php.
Fixed buttons duplicating in issues_view.php.
Fixed one redirect not working in issue_createProcess.php
Fixed people sometimes showing twice in issues_create.php and issues_createTechnician.php along with ordering the lists by surname, preferredName.
Ordered list in issues_assign.php.

v0.1.04
-------
Fixed an issue where the gibbonPersonID would not be set when creating an issue in issues_create.php.