@@ -73,3 +73,4 @@ Ordered list in issues_assign.php.
 v0.1.04
 -------
 Fixed an issue where the gibbonPersonID would not be set when creating an issue in issues_create.php.
+Fixed an issues where issues_discuss_view.php would not display properly. 
